# cord-search.github.io

./: .gitignore  CNAME  README.md  README.org  dep.sh  index.html
.github/workflows/: main.yml
backend/: .flake8  .gitignore  .pdm.toml  api.py  build_index.py  clustering.py  config.py.example  es_search.py  module.py  pyproject.toml  stopwords  typ.py
data/: .gitignore  README.org
frontend/: .gitignore  .prettierrc.toml  dep.sh  dep2.sh  index.html  style.css
frontend/map/: map.html  map.js
frontend/scripts/: main.js  visualize_data.js
frontend/tutorial/: index.html
frontend/visualize/: visualize_data.js
libs/: hilitor.js
map/: map.js
scripts/: main.js  visualize_data.js
tutorial/: index.html
