[build-system]
build-backend = "pdm.builders.api"
requires = ["pdm"]

[tool]

[tool.black]
line-length = 79

[tool.pdm]
author = "Nasy <nasyxx+git@gmail.com>"
description = ""
homepage = ""
license = "GPL-3.0"
name = "cord_backend"
python_requires = ">=3.8"
version = "0.0.1"

[tool.pdm.dependencies]
elasticsearch = "<8.0.0,>=7.6.0"
tqdm = "<5.0.0,>=4.45.0"
aiohttp = "<4.0.0,>=3.6.2"
aiohttp_cors = "<1.0.0,>=0.7.0"
loguru = "<1.0.0,>=0.4.1"
fastapi = "<1.0.0,>=0.54.0"
uvicorn = "<1.0.0,>=0.11.3"

[tool.pdm.dev-dependencies]
